; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libucl/tests/extr_test_schema.c_read_stdin.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libucl/tests/extr_test_schema.c_read_stdin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZ = common dso_local global i32 0, align 4
@STDIN_FILENO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @read_stdin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_stdin(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  %8 = load i32, i32* @BUFSIZ, align 4
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i8* @malloc(i32 %9)
  %11 = load i8**, i8*** %3, align 8
  store i8* %10, i8** %11, align 8
  %12 = load i8**, i8*** %3, align 8
  %13 = load i8*, i8** %12, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %63

16:                                               ; preds = %1
  %17 = load i8**, i8*** %3, align 8
  %18 = load i8*, i8** %17, align 8
  store i8* %18, i8** %7, align 8
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %59, %16
  %21 = load i32, i32* @STDIN_FILENO, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sub nsw i32 %23, 1
  %25 = call i32 @read(i32 %21, i8* %22, i32 %24)
  store i32 %25, i32* %6, align 4
  %26 = icmp sgt i32 %25, 0
  br i1 %26, label %27, label %60

27:                                               ; preds = %20
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %5, align 4
  %30 = sub nsw i32 %29, %28
  store i32 %30, i32* %5, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i8*, i8** %7, align 8
  %33 = sext i32 %31 to i64
  %34 = getelementptr inbounds i8, i8* %32, i64 %33
  store i8* %34, i8** %7, align 8
  %35 = load i32, i32* %5, align 4
  %36 = icmp sle i32 %35, 1
  br i1 %36, label %37, label %59

37:                                               ; preds = %27
  %38 = load i8**, i8*** %3, align 8
  %39 = load i8*, i8** %38, align 8
  %40 = load i32, i32* %4, align 4
  %41 = mul nsw i32 %40, 2
  %42 = call i8* @realloc(i8* %39, i32 %41)
  %43 = load i8**, i8*** %3, align 8
  store i8* %42, i8** %43, align 8
  %44 = load i8**, i8*** %3, align 8
  %45 = load i8*, i8** %44, align 8
  %46 = icmp eq i8* %45, null
  br i1 %46, label %47, label %48

47:                                               ; preds = %37
  store i32 -1, i32* %2, align 4
  br label %63

48:                                               ; preds = %37
  %49 = load i8**, i8*** %3, align 8
  %50 = load i8*, i8** %49, align 8
  %51 = load i32, i32* %4, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i8, i8* %50, i64 %52
  %54 = getelementptr inbounds i8, i8* %53, i64 -1
  store i8* %54, i8** %7, align 8
  %55 = load i32, i32* %4, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %5, align 4
  %57 = load i32, i32* %4, align 4
  %58 = mul nsw i32 %57, 2
  store i32 %58, i32* %4, align 4
  br label %59

59:                                               ; preds = %48, %27
  br label %20

60:                                               ; preds = %20
  %61 = load i8*, i8** %7, align 8
  store i8 0, i8* %61, align 1
  %62 = load i32, i32* %6, align 4
  store i32 %62, i32* %2, align 4
  br label %63

63:                                               ; preds = %60, %47, %15
  %64 = load i32, i32* %2, align 4
  ret i32 %64
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i8* @realloc(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
